--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
 name: Update gist with WakaTime stats
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 5 * * *"
   # Manual triggers with workflow_dispatch
   workflow_dispatch:
 jobs:
@@ -12,6 +12,6 @@ jobs:
       - name: Update gist
         uses: matchai/waka-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 7076524ad4f9bde68536953fe6d69cdf
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.TOKEN_WAKATIME }}
+          GIST_ID: ${{ secrets.SECRETS_GIST_ID }}
+          WAKATIME_API_KEY: ${{ secrets.SECRETS_WAKATIME_API_KEY }}
